change header image behavior and try to fix attached scroll bug on mobile

--- a/style.css
+++ b/style.css
@@ -391,7 +391,9 @@ a {
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-position: center;
-	background-size: cover
+	background-size: cover;
+	height: 100%;
+	overflow: hidden;
 }
 
 #landing-page-text {
